[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scenes/title/Title.gd" type="Script" id=1]
[ext_resource path="res://src/fonts/TitanOne_120.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/fonts/TitanOne_60.tres" type="DynamicFont" id=3]

[node name="Title" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.4, 0.4, 0.4, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 30.0
margin_right = 1620.0
margin_bottom = 2160.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1620.0
margin_bottom = 339.0
custom_constants/margin_top = 200

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 200.0
margin_right = 1620.0
margin_bottom = 339.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Untitled Cliff Game[/center]"
text = "Untitled Cliff Game"
fit_content_height = true

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 343.0
margin_right = 1620.0
margin_bottom = 583.0
custom_constants/margin_top = 120

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_top = 120.0
margin_right = 1620.0
margin_bottom = 240.0

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer"]
unique_name_in_owner = true
margin_left = 510.0
margin_right = 1110.0
margin_bottom = 120.0
rect_min_size = Vector2( 600, 120 )
custom_fonts/font = ExtResource( 3 )
text = "Play"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 587.0
margin_right = 1620.0
margin_bottom = 767.0
custom_constants/margin_top = 60

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/MarginContainer3"]
margin_top = 60.0
margin_right = 1620.0
margin_bottom = 180.0

[node name="InstructionsButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer3/CenterContainer"]
unique_name_in_owner = true
margin_left = 510.0
margin_right = 1110.0
margin_bottom = 120.0
rect_min_size = Vector2( 600, 120 )
custom_fonts/font = ExtResource( 3 )
text = "Instructions"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 771.0
margin_right = 1620.0
margin_bottom = 951.0
custom_constants/margin_top = 60

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/MarginContainer4"]
margin_top = 60.0
margin_right = 1620.0
margin_bottom = 180.0

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer4/CenterContainer"]
unique_name_in_owner = true
margin_left = 510.0
margin_right = 1110.0
margin_bottom = 120.0
rect_min_size = Vector2( 600, 120 )
custom_fonts/font = ExtResource( 3 )
text = "Credits"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer4/CenterContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
